WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159809
ASSERTION FAILED: isMainThread() in ~UniqueIDBDatabase() since
r201997
https://bugs.webkit.org/show_bug.cgi?id=159809
Summary
ASSERTION FAILED: isMainThread() in ~UniqueIDBDatabase() since r201997
Carlos Garcia Campos
Reported
2016-07-15 05:42:06 PDT
Several tests crash in GTK+ debug bot because of this: imported/w3c/web-platform-tests/IndexedDB/idbcursor_advance_objectstore3.htm imported/w3c/web-platform-tests/IndexedDB/idbcursor_continue_objectstore2.htm imported/w3c/web-platform-tests/IndexedDB/idbcursor_continue_objectstore4.htm imported/w3c/web-platform-tests/IndexedDB/idbcursor_delete_index2.htm imported/w3c/web-platform-tests/IndexedDB/idbcursor_iterating_objectstore2.htm imported/w3c/web-platform-tests/IndexedDB/idbcursor_update_objectstore3.htm I can't reproduce it locally with a release build and using a RELEAE_ASSERT instead. STDERR: ASSERTION FAILED: isMainThread() STDERR: ../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp(62) : WebCore::IDBServer::UniqueIDBDatabase::~UniqueIDBDatabase() STDERR: 1 0x7fbb70409acf /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7fbb70409acf] STDERR: 2 0x7fbb76f7b294 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::IDBServer::UniqueIDBDatabase::~UniqueIDBDatabase()+0xb2) [0x7fbb76f7b294] STDERR: 3 0x7fbb767d1223 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::ThreadSafeRefCounted<WebCore::IDBServer::UniqueIDBDatabase>::deref()+0x2f) [0x7fbb767d1223] STDERR: 4 0x7fbb76f0b87d /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Ref<WebCore::IDBServer::UniqueIDBDatabase>::~Ref()+0x27) [0x7fbb76f0b87d] STDERR: 5 0x7fbb76f85edc /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::IDBServer::UniqueIDBDatabase::executeNextDatabaseTask()+0x110) [0x7fbb76f85edc] STDERR: 6 0x7fbb76fa84fc /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(void WTF::callMemberFunctionForCrossThreadTaskImpl<WebCore::IDBServer::UniqueIDBDatabase, void (WebCore::IDBServer::UniqueIDBDatabase::*)(), std::tuple<>>(WebCore::IDBServer::UniqueIDBDatabase*, void (WebCore::IDBServer::UniqueIDBDatabase::*)(), std::tuple<>&&, std::integer_sequence<unsigned long>)+0x65) [0x7fbb76fa84fc] STDERR: 7 0x7fbb76f9c1c2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(void WTF::callMemberFunctionForCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase, void (WebCore::IDBServer::UniqueIDBDatabase::*)(), std::tuple<>, std::integer_sequence<unsigned long> >(WebCore::IDBServer::UniqueIDBDatabase*, void (WebCore::IDBServer::UniqueIDBDatabase::*)(), std::tuple<>&&)+0x4a) [0x7fbb76f9c1c2] STDERR: 8 0x7fbb76f93f9d /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase>(WebCore::IDBServer::UniqueIDBDatabase&, void (WebCore::IDBServer::UniqueIDBDatabase::*)())::{lambda()#1}::operator()()+0x3d) [0x7fbb76f93f9d] STDERR: 9 0x7fbb76fbab7c /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase>(WebCore::IDBServer::UniqueIDBDatabase&, void (WebCore::IDBServer::UniqueIDBDatabase::*)())::{lambda()#1}>::call()+0x1c) [0x7fbb76fbab7c] STDERR: 10 0x7fbb767cf19d /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::operator()() const+0x37) [0x7fbb767cf19d] STDERR: 11 0x7fbb767ce15e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::CrossThreadTask::performTask()+0x18) [0x7fbb767ce15e] STDERR: 12 0x7fbb76f09b74 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::IDBServer::IDBServer::databaseRunLoop()+0x82) [0x7fbb76f09b74] STDERR: 13 0x7fbb76f09aef /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::IDBServer::IDBServer::databaseThreadEntry(void*)+0x4d) [0x7fbb76f09aef] STDERR: 14 0x7fbb70426742 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2204742) [0x7fbb70426742] STDERR: 15 0x7fbb704268f8 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x22048f8) [0x7fbb704268f8] STDERR: 16 0x7fbb7681383c /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::function<void ()>::operator()() const+0x32) [0x7fbb7681383c] STDERR: 17 0x7fbb70426624 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2204624) [0x7fbb70426624] STDERR: 18 0x7fbb70461cb1 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x223fcb1) [0x7fbb70461cb1] STDERR: 19 0x7fbb6db2d0a4 /lib/x86_64-linux-gnu/libpthread.so.0(+0x80a4) [0x7fbb6db2d0a4] STDERR: 20 0x7fbb68e3587d /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7fbb68e3587d]
Attachments
Patch
(1.94 KB, patch)
2016-07-15 06:23 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-07-15 06:23:36 PDT
Created
attachment 283756
[details]
Patch This patch fixes the crashes in the GTK+ debug bot.
WebKit Commit Bot
Comment 2
2016-07-16 04:34:42 PDT
Comment on
attachment 283756
[details]
Patch Clearing flags on attachment: 283756 Committed
r203323
: <
http://trac.webkit.org/changeset/203323
>
WebKit Commit Bot
Comment 3
2016-07-16 04:34:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug